fixed issue 917 - put 32-bit build in bin and 64-bit build in bin64 - add 64-bit test in runsuite.cmake
SVN-Revision: 904

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -451,12 +451,22 @@ if (USE_DRSYMS AND TOOL_DR_MEMORY)
 elseif (PERL_TO_EXE)
   # We are only releasing Dr. Memory so no toolnames: would need to create
   # shortcut or .bat file to run from right dir
-  set(INSTALL_BIN_PREFIX "bin")
-  set(BUILD_BIN_PREFIX "bin")
+  if (X64)
+    set(INSTALL_BIN_PREFIX "bin64")
+    set(BUILD_BIN_PREFIX "bin64")
+  else (X64)
+    set(INSTALL_BIN_PREFIX "bin")
+    set(BUILD_BIN_PREFIX "bin")
+  endif (X64)
 else (PERL_TO_EXE)
   # When installed we now use a bin dir for scripts
-  set(INSTALL_BIN_PREFIX "${toolname}/bin")
-  set(BUILD_BIN_PREFIX "bin")
+  if (X64)
+    set(INSTALL_BIN_PREFIX "${toolname}/bin64")
+    set(BUILD_BIN_PREFIX "bin64")
+  else (X64)
+    set(INSTALL_BIN_PREFIX "${toolname}/bin")
+    set(BUILD_BIN_PREFIX "bin")
+  endif (X64)
 endif (USE_DRSYMS AND TOOL_DR_MEMORY)
 if (USE_DRSYMS AND TOOL_DR_MEMORY)
   # For NSIS we have everything in top-level bin/
