--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,17 +73,15 @@ endfunction(append_compile_flags)
 
 function(set_props target)
   if (UNIX)
-    set(defs "-DLINUX")
     if (HAVE_FVISIBILITY)
-      set(defs "${defs} -DUSE_VISIBILITY_ATTRIBUTES")
+      set(defs ${defs} USE_VISIBILITY_ATTRIBUTES)
     endif (HAVE_FVISIBILITY)
-  else (UNIX)
-    set(defs "-DWINDOWS")
   endif (UNIX)
   if (VMKERNEL)
-    set(defs "${defs} -DVMX86_SERVER")
+    set(defs ${defs} VMX86_SERVER)
   endif (VMKERNEL)
-  set_target_properties(${target} PROPERTIES COMPILE_FLAGS "${defs}")
+  set_property(TARGET ${target} PROPERTY COMPILE_DEFINITIONS
+    ${defs} ${DEFINES_NO_D} ${DR_DEFINES_NO_D})
   # enough tests need this (malloc, free, registers, cs2bug, float, etc.)
   # that we add to all tests
   if (nounused_avail)
@@ -92,8 +90,23 @@ function(set_props target)
 endfunction(set_props)
 
 function(tobuild name source)
-  add_executable(${name} ${source})
+  set(srcs ${source})
+
+  # support same-file asm code
+  file(READ "${CMAKE_CURRENT_SOURCE_DIR}/${source}" srccode)
+  if ("${srccode}" MATCHES "ifndef ASM_CODE_ONLY")
+    add_split_asm_target("${CMAKE_CURRENT_SOURCE_DIR}/${source}" asm_source gen_asm_tgt
+      "_asm" "${asm_defs}" "${asm_deps}")
+    set(srcs ${srcs} ${asm_source})
+  endif ("${srccode}" MATCHES "ifndef ASM_CODE_ONLY")
+
+  add_executable(${name} ${srcs})
   set_props(${name})
+
+  if ("${srccode}" MATCHES "ifndef ASM_CODE_ONLY" AND
+      "${CMAKE_GENERATOR}" MATCHES "Visual Studio")
+    add_dependencies(${test} ${gen_asm_tgt})
+  endif ()
 endfunction(tobuild)
 
 function(append_link_flags target newflags)
@@ -110,6 +123,9 @@ function(tobuild_lib name source cust_flags cust_link)
   add_library(${name} SHARED ${source})
   set_props(${name})
   get_target_property(cur_flags ${name} COMPILE_FLAGS)
+  if (NOT cur_flags)
+    set(cur_flags "")
+  endif (NOT cur_flags)
   set_target_properties(${name} PROPERTIES COMPILE_FLAGS "${cur_flags} ${cust_flags}")
   append_link_flags(${name} "${cust_link}")
 endfunction(tobuild_lib)
@@ -341,6 +357,9 @@ endfunction(newtest)
 function(newtest_custbuild test source cust_flags resbase)
   newtest_ex(${test} ${source} "" "" "" OFF "${resbase}")
   get_target_property(cur_flags ${test} COMPILE_FLAGS)
+  if (NOT cur_flags)
+    set(cur_flags "")
+  endif (NOT cur_flags)
   set_target_properties(${test} PROPERTIES COMPILE_FLAGS "${cur_flags} ${cust_flags}")
 endfunction(newtest_custbuild)
 
