fixes issue 639 + for -replace_malloc, continuation-style solution from i#900   allows naturally using the malloc call as the top frame + add /debug to get proper replace_* syms for drmemorylib + disable -callstack_use_top_fp_selectively for -replace_malloc   for invalid arg or leak error types: we trust our   replace_* routines to be compiled w/ frame pointers + for -replace_malloc, don't sub 1 (for both Windows and postprocess.pl)   for malloc + invalid arg top frames + add *drmemory* to -callstack_modname_hide for better frames to   hide the "drmemorylib.dll!" or "libdrmemory.so.1.4.836!"
SVN-Revision: 934

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -890,9 +890,16 @@ set_target_properties(${client_target} PROPERTIES
 if (WIN32)
   # annoying to have ASLR and not on module list
   # plus, now we require the same base for pcache
+  set(new_flags "/dynamicbase:no")
+  if (NOT DEFINED GENERATE_PDBS OR GENERATE_PDBS)
+    set(new_flags "${new_flags} /debug")
+  endif ()
   get_target_property(cur_flags ${client_target} LINK_FLAGS)
+  if (NOT cur_flags)
+    set(cur_flags "")
+  endif (NOT cur_flags)
   set_target_properties(${client_target} PROPERTIES
-    LINK_FLAGS "${cur_flags} /dynamicbase:no")
+    LINK_FLAGS "${cur_flags} ${new_flags}")
 endif (WIN32)
 if (WIN32 AND USE_DRSYMS AND TOOL_DR_MEMORY)
   configure_DynamoRIO_standalone(${toolname})
