Add heandle leaks detection - add handlecheck.[c/h] - add check_handle_leaks option - add report_handle_leak - add handle leak test - update system call for handle check
SVN-Revision: 941

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -828,6 +828,7 @@ else (TOOL_DR_HEAPSTAT)
     set(srcs ${srcs} drmemory/syscall_windows.c)
     set(srcs ${srcs} drmemory/syscall_wingdi.c)
     set(srcs ${srcs} drmemory/gdicheck.c)
+    set(srcs ${srcs} drmemory/handlecheck.c)
     if (SYSCALL_DRIVER)
       set(srcs ${srcs} drmemory/syscall_driver.c)
     endif (SYSCALL_DRIVER)
