--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -551,6 +551,7 @@ if (TOOL_DR_MEMORY)
     endif (GCC)
 
     newtest(gdi gdi.cpp)
+    newtest_ex(handle handle.cpp "" "-check_handle_leaks" "" OFF "")
   endif (WIN32)
 
   # FIXME i#657: realloc is flaky on the Windows bots.
